Fixed overflow and submodules

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,18 +1,19 @@
 :root {
-    color-scheme: dark;
+    color-scheme: dark light;
 }
+
 body{
     width: 100vw;
     height: 100vh;
     margin: 0;
 }
 textarea {
-    flex: .3 1;
+    flex: .5 1;
     height: 100%;
 }
 .editorWrapper {
     position: relative;
-    flex: .3 1;
+    flex: .5 1;
     height: 100%;
 }
 #editor { 
@@ -65,6 +66,7 @@ canvas {
     padding-bottom: 10px;
     user-select: none;
     justify-content: start;
+    color: black;
 }
 .black-key {
     background: linear-gradient(to right, #444 60%, #FFF 75%, #000 76%, #FFF 77%);
